// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Deck component without crashing 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "justifyContent": "center",
      "marginBottom": 4,
      "marginLeft": 4,
      "marginRight": 4,
      "minHeight": 180,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#00838f",
            "fontSize": 24,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      React
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#00838f",
          "fontSize": 20,
          "fontWeight": "300",
          "textAlign": "center",
        }
      }
    >
      2 cards
    </Text>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#00838f",
          "marginTop": 10,
          "opacity": 1,
          "width": 150,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#f2f3f4",
            "fontSize": 18,
          }
        }
      >
        View deck
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders deck 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "justifyContent": "center",
      "marginBottom": 4,
      "marginLeft": 4,
      "marginRight": 4,
      "minHeight": 180,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#00838f",
            "fontSize": 24,
            "fontWeight": "700",
            "textAlign": "center",
          },
          Object {},
        ]
      }
    >
      React
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#00838f",
          "fontSize": 20,
          "fontWeight": "300",
          "textAlign": "center",
        }
      }
    >
      2 cards
    </Text>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#00838f",
          "marginTop": 10,
          "opacity": 1,
          "width": 150,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#f2f3f4",
            "fontSize": 18,
          }
        }
      >
        View deck
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders no deck avaialble message when no deck exists 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F5F5F5",
      "flex": 1,
      "justifyContent": "center",
      "marginBottom": 4,
      "marginLeft": 4,
      "marginRight": 4,
      "minHeight": 180,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    No Deck exists
  </Text>
</View>
`;
